src/main/java/application/testData/invalidRandomAddresses/medium/RandomAddressesWithIndicatives.java
package application.testData.invalidRandomAddresses.medium;

public class RandomAddressesWithIndicatives {
}
